# world-proto

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bunfig.toml  package.json
.claude/: CLAUDE.md
.github/workflows/: deploy.yaml
crates/geometry-engine/: Cargo.toml  build.sh
crates/geometry-engine/src/: lib.rs
crates/geometry-engine/src/geometry/: animations.rs  heightmap.rs  mod.rs  primitives.rs  terrain.rs  voxel.rs
crates/geometry-engine/src/math/: mod.rs  vector.rs
doc/: Implementation.md  blocks.md
