[package]
name = "geometry-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
nalgebra = { version = "0.32", default-features = false, features = ["std"] }

[profile.release]
opt-level = "s"
lto = true